--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://luchnikovi.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: https://twitter.com/Ilia52728296
-github_username:  https://github.com/LuchnikovI
+twitter_username: Ilia52728296
+github_username:  LuchnikovI
 
 # Build settings
 theme: jekyll-theme-minimal
