--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,52 @@
-name: Ilia Luchnikov
-description: Here I host my blogposts and some information about my projects
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you: 
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 
-markdown: kramdown
-highlighter: rouge
-logo: false
-paginate: 15
-baseurl: /about
-domain_name: "http://LuchnikovI.github.io"
-google_analytics: "UA-XXXXXXXX-X"
-plugins: [jekyll-paginate]
+title: Ilia Luchnikov
+email: luchnikovilya@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Here is my personal page where I host my blogposts and some information about my projects
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://luchnikovi.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: LuchnikovI
 
-# Details for the RSS feed generator
-url: "LuchnikovI.github.io"
-author: "Ilia Luchnikov"
+# Build settings
+theme: minima
+plugins:
+  - jekyll-feed
 
-# Disqus config
-disqus-shortname: ""
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
